[package]
name = "enorm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
derive = ["dep:enorm-derive"]
bundled = ["enorm-derive/bundled"]

sqlite = ["sqlx/sqlite", "enorm-derive/sqlite"]
postgres = ["sqlx/postgres", "enorm-derive/postgres"]
mysql = ["sqlx/mysql", "enorm-derive/mysql"]
uuid = ["dep:uuid", "sqlx/uuid"]

[dependencies]
sqlx.workspace = true
enorm-derive = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true

[dev-dependencies]
enorm = { path = ".", features = ["uuid"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
